traefik/kustomize/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: forwarded-real-ip
spec:
  plugin:
    forwarded-real-ip:
      excludednets:
          - 1.1.1.1/24
